# life

./: LICENSE  README.md  life.cabal  stack.yaml
doc/: life.odt
src/: Life.hs  Main.hs  StateVar.hs
