name:                life
version:             0.1.0.0
synopsis:            Game of life with simple GUI
-- description:
homepage:            https://github.com/pbv/life
license:             BSD3
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
copyright:           2017 Pedro Vasconcelos
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable life
  ghc-options:         -threaded -O2
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Life
                       StateVar
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, 
                       wx, 
                       wxc,
                       wxcore,
                       wxdirect,
                       random,
                       process
